Fix settings ui z-index issue

--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -41,7 +41,6 @@
   margin-bottom: 1em;
   background: var(--color-surface-1);
   border-radius: var(--surface-border-radius);
-  z-index: 0;
 
   & > * {
     transition: all 0.15s ease;
@@ -66,7 +65,6 @@
     margin-left: 2em;
     position: relative;
     border-radius: var(--surface-border-radius) 0 var(--surface-border-radius) 0;
-    z-index: 5;
 
     &:not(:last-child) {
       border-radius: var(--surface-border-radius) 0 var(--surface-border-radius) var(--surface-border-radius);
@@ -81,7 +79,6 @@
     padding: 1em;
     position: relative;
     transition: all .15s ease;
-    z-index: 10;
 
     &.disabled {
       pointer-events: none;
